# perspective-parquet

./: .bumpversion.cfg  .copier-answers.yaml  .gitattributes  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  test.parquet
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  build.yml
binder/: postBuild  requirements.txt
js/: build.cjs  build.js  package.json  playwright.config.js  pnpm-lock.yaml  webpack.config.cjs
js/src/: index.js  psp_widget.js
js/src/extension/: install.json  perspective_parquet.json
js/src/js/: index.js  psp_widget.js
js/tests/: activate.test.js  all.spec.js  export.test.js
js/tests/test_files/: test_brotli.parquet  test_gzip.parquet  test_none.parquet  test_snappy.parquet
perspective_parquet/: __init__.py
perspective_parquet/extension/: install.json
perspective_parquet/tests/: test_all.py
